fix css (remove useless stuff, add text-align)

--- a/website/static/main.css
+++ b/website/static/main.css
@@ -25,24 +25,9 @@ table {
   border: #000000;
 }
 
-thead th:nth-child(1) {
-  width: 30%;
-}
-
-thead th:nth-child(2) {
-  width: 20%;
-}
-
-thead th:nth-child(3) {
-  width: 15%;
-}
-
-thead th:nth-child(4) {
-  width: 35%;
-}
-
 th, td {
   padding: 20px;
+  text-align: center;
 }
 
 tbody tr:nth-child(odd) {
